# daemscore

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.cpp  cccoin.pri  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  faicoin.pri  faicoin.pri.win  init.cpp  key.cpp  key.h  keystore.cpp  (+50 more)
src/ccc/: browserdb.cpp  browserdb.h  cc.h  content.cpp  content.h  contentutil.cpp  contentutil.h  domain.cpp  domain.h  ecminer.cpp  ecminer.h  filepackage.cpp  filepackage.h  jsondb.cpp  jsondb.h  link.cpp  link.h  mhash.cpp  mhash.h  p2pservice.cpp  p2pservice.h  script2txposdb.cpp  script2txposdb.h  settings.cpp  settings.h  shop.cpp  shop.h  sqlitewrapper.cpp  sqlitewrapper.h  txaddressmap.cpp  txaddressmap.h
src/ccc/KompexSQLiteWrapper/: sqlitetest.c  sqlitewrapper.cpp  sqlitewrapper.h
src/ccc/KompexSQLiteWrapper/Kompex SQLite Example/: main.cpp
src/ccc/scrypt/: crypto_scrypt-nosse.c  scrypt_platform.h
src/crypto/: scrypt.cpp  scrypt.h
src/fai/: cc.h  content.cpp  content.h  contentutil.cpp  contentutil.h  domain.cpp  domain.h  ecminer.cpp  ecminer.h  filepackage.cpp  filepackage.h  jsondb.cpp  jsondb.h  link.cpp  link.h  mhash.cpp  mhash.h  p2pservice.cpp  p2pservice.h  script2txposdb.h  settings.cpp  settings.h  shop.cpp  shop.h  sqlitewrapper.cpp  sqlitewrapper.h
src/fai/scrypt/: crypto_scrypt-ref.c  crypto_scrypt-sse.c
src/json/: json_spirit_writer_template.h
src/leveldb/helpers/memenv/: memenv_test.cc
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  core  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  paymentserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  transactiontablemodel.cpp  utilitydialog.cpp  walletmodel.cpp
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  (+19 more)
src/qt/test/: test_main.cpp  uritests.cpp
src/qt_ui/: accountdialog.cpp  accountdialog.h  autosaver.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bookmarks.cpp  browser-qt.pro  browser.cpp  browser.h  browser.moc  browser.qrc  browser_locale.qrc  chasewidget.h  clientmodel.cpp  clientmodel.h  cookiejar.cpp  cookiejar.h  downloadmanager.cpp  downloadmanager.h  featurepermissionbar.cpp  featurepermissionbar.h  guiconstants.h  guiutil.cpp  guiutil.h  history.cpp  history.h  intro.cpp  jsinterface.cpp  jsinterface.h  mainframe.cpp  mainframe.h  mainview.cpp  mainview.h  networkaccessmanager.cpp  networkstyle.cpp  qt.pri  qt_1.pri  searchlineedit.h  settings2.cpp  (+30 more)
src/qt_ui/forms/: accountdialog.ui  askpassphrasedialog.ui  intro.ui  settings.ui  userconfirmdialog.ui  walletpage.ui
src/qt_ui/locale/: bitcoin_af_ZA.qm  bitcoin_ar.qm  bitcoin_be_BY.qm  bitcoin_bg.qm  bitcoin_bs.qm  bitcoin_ca@valencia.qm  bitcoin_ca_ES.qm  bitcoin_cs.qm  bitcoin_da.qm  bitcoin_de.qm  bitcoin_el_GR.qm  bitcoin_en.qm  bitcoin_en.ts  bitcoin_eo.qm  bitcoin_es.qm  bitcoin_es_CL.qm  bitcoin_es_DO.qm  bitcoin_es_MX.qm  bitcoin_es_UY.qm  bitcoin_et.qm  bitcoin_eu_ES.qm  bitcoin_fa.qm  bitcoin_fa_IR.qm  bitcoin_fi.qm  bitcoin_fr.qm  bitcoin_gl.qm  bitcoin_he.qm  bitcoin_hi_IN.qm  bitcoin_hr.qm  bitcoin_hu.qm  bitcoin_id_ID.qm  bitcoin_it.qm  bitcoin_ja.qm  bitcoin_ka.qm  bitcoin_kk_KZ.qm  bitcoin_ko_KR.qm  bitcoin_ky.qm  bitcoin_la.qm  bitcoin_lt.qm  bitcoin_lv_LV.qm  (+20 more)
src/qt_ui/res/: bitcoin-qt-res.rc
src/qt_ui/res/css/: app-overrides.css  bootstrap.min.css  br-overrides.css  domain-overrides.css  export-history.htm  jquery-ui.structure.min.css  jquery-ui.theme.min.css  main-overrides.css  msg-overrides.css  overrides.min.css  pb-overrides.css  shop-overrides.css  wallet-overrides.css
src/qt_ui/res/html/: apps.html  browser.html  browser_en.html  domain.html  domain_en.html  downloader.html  help.html  index.html  messenger.html  messenger_en.html  miner.html  miner_en.html  publisher.html  publisher_en.html  settings.html  settings_en.html  shop.html  shop_en.html  templates.html  tools.html  wallet.html  wallet_1.html  wallet_en.html
src/qt_ui/res/js/: apps.js  bitcoinjs.js  blockchainapi.min.js  bppage.js  browser.js  browserapi.js  browserpage.js  domain.js  downloader.js  fai-api.js  help.js  helppage.js  jquery-ui.datepicker-zh-CN.js  jquery-ui.min.js  messenger.js  messengerpage.js  miner.js  publisher.js  (+9 more)
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/include/: secp256k1.h
src/secp256k1/src/: num.h  scalar.h  secp256k1.c
src/test/: base58_tests.cpp  bloom_tests.cpp  miner_tests.cpp  multisig_tests.cpp  rpc_wallet_tests.cpp  script_tests.cpp  sighash_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp
(+38 files in other folders)
